--- a/Alpha_Vantage_pkg/setup.cfg
+++ b/Alpha_Vantage_pkg/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
-name = Alpha_Vantage_API_Data
+name = Alpha-Vantage-API-Data
 version = 0.0.1
-author = Jeff
+author = Jeff Duan 
 description = This is an Aplha_Vantage_API data retrieving package
 long_description = file: README.md
 long_description_content_type = text/markdown
