fix some small issue

--- a/Alpha_Vantage_pkg/setup.cfg
+++ b/Alpha_Vantage_pkg/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = Alpha-Vantage-API-Data
+name = Alpha_Vantage_API_Data
 version = 0.0.1
 author = Jeff Duan 
 description = This is an Aplha_Vantage_API data retrieving package
